--- a/website/appsettings.json
+++ b/website/appsettings.json
@@ -1,11 +1,11 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
+    }
+  },
   "AllowedHosts": "*",
-  "MongoURI" :  ""
+  "MongoUri": "mongodb://root:root@college-shard-00-00.a6lvo.mongodb.net:27017,college-shard-00-01.a6lvo.mongodb.net:27017,college-shard-00-02.a6lvo.mongodb.net:27017/College?ssl=true&replicaSet=atlas-nfwb1i-shard-0&authSource=admin&retryWrites=true&w=majority"
 }
