--- a/website/ClientApp/package.json
+++ b/website/ClientApp/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^16.0.0",
     "react-icons": "^4.3.1",
     "react-router-bootstrap": "^0.25.0",
-    "react-router-dom": "^5.1.2",
+    "react-router": "^6.2.1",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "^3.4.1",
     "react-slick": "^0.28.1",
     "reactstrap": "^8.4.1",
