--- a/website/ClientApp/package.json
+++ b/website/ClientApp/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.25.0",
     "bootstrap": "^4.1.3",
     "jquery": "^3.4.1",
     "merge": "^1.2.1",
@@ -10,8 +11,8 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-icons": "^4.3.1",
-    "react-router-bootstrap": "^0.25.0",
     "react-router": "^6.2.1",
+    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^3.4.1",
     "react-slick": "^0.28.1",
