--- a/website/ClientApp/package.json
+++ b/website/ClientApp/package.json
@@ -8,6 +8,7 @@
     "jquery": "^3.4.1",
     "merge": "^1.2.1",
     "oidc-client": "^1.9.0",
+    "prettier": "^2.5.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-icons": "^4.3.1",
@@ -41,7 +42,8 @@
     "build": "react-scripts build",
     "test": "cross-env CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "eslint ./src/"
+    "lint": "eslint ./src/",
+    "format": "prettier --ignore-path .gitignore --write ."
   },
   "browserslist": {
     "production": [
