--- a/website/ClientApp/package.json
+++ b/website/ClientApp/package.json
@@ -20,7 +20,8 @@
     "reactstrap": "^8.4.1",
     "rimraf": "^2.6.2",
     "slick": "^1.12.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "use-state-if-mounted": "^1.0.4"
   },
   "devDependencies": {
     "ajv": "^6.9.1",
@@ -39,7 +40,7 @@
   },
   "scripts": {
     "start": "rimraf ./build && react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false && react-scripts build",
     "test": "cross-env CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "eslint ./src/",
