--- a/website/ClientApp/package.json
+++ b/website/ClientApp/package.json
@@ -12,6 +12,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-icons": "^4.3.1",
+    "react-paginate": "^8.1.0",
     "react-router": "^6.2.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^6.2.1",
