--- a/website/ClientApp/package.json
+++ b/website/ClientApp/package.json
@@ -5,14 +5,19 @@
   "dependencies": {
     "axios": "^0.25.0",
     "bootstrap": "^4.1.3",
+    "draft-js": "^0.11.7",
+    "jodit": "^3.13.3",
+    "jodit-react": "^1.1.21",
     "jquery": "^3.4.1",
     "merge": "^1.2.1",
     "oidc-client": "^1.9.0",
     "prettier": "^2.5.1",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-icons": "^4.3.1",
     "react-paginate": "^8.1.0",
+    "react-quill": "^2.0.0-beta.4",
     "react-router": "^6.2.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^6.2.1",
@@ -20,6 +25,8 @@
     "react-slick": "^0.28.1",
     "reactstrap": "^8.4.1",
     "rimraf": "^2.6.2",
+    "slate": "^0.72.8",
+    "slate-react": "^0.72.8",
     "slick": "^1.12.2",
     "slick-carousel": "^1.8.1",
     "typewriter-effect": "^2.18.2",
