--- a/website/ClientApp/package.json
+++ b/website/ClientApp/package.json
@@ -14,7 +14,9 @@
     "merge": "^1.2.1",
     "oidc-client": "^1.9.0",
     "prettier": "^2.5.1",
+    "quill-image-uploader": "^1.2.2",
     "react": "^16.14.0",
+    "react-carousel-minimal": "^1.4.1",
     "react-dom": "^16.14.0",
     "react-draft-wysiwyg": "^1.14.7",
     "react-icons": "^4.3.1",
