--- a/website/ClientApp/package.json
+++ b/website/ClientApp/package.json
@@ -19,9 +19,12 @@
     "react-carousel-minimal": "^1.4.1",
     "react-dom": "^16.14.0",
     "react-draft-wysiwyg": "^1.14.7",
+    "react-gallery-carousel": "^0.2.9",
     "react-icons": "^4.3.1",
+    "react-image-gallery": "^1.2.7",
     "react-paginate": "^8.1.0",
     "react-quill": "^2.0.0-beta.4",
+    "react-responsive-carousel": "^3.2.22",
     "react-router": "^6.2.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^6.2.1",
