--- a/website/ClientApp/package.json
+++ b/website/ClientApp/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^32.0.0",
     "@ckeditor/ckeditor5-react": "^4.0.0",
+    "@mui/styled-engine-sc": "^5.4.1",
     "axios": "^0.25.0",
     "bootstrap": "^4.1.3",
     "draft-js": "^0.11.7",
@@ -15,7 +16,7 @@
     "oidc-client": "^1.9.0",
     "prettier": "^2.5.1",
     "quill-image-uploader": "^1.2.2",
-    "react": "^16.14.0",
+    
     "react-carousel-minimal": "^1.4.1",
     "react-dom": "^16.14.0",
     "react-draft-wysiwyg": "^1.14.7",
@@ -36,7 +37,9 @@
     "slate-react": "^0.72.8",
     "slick": "^1.12.2",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.3",
     "typewriter-effect": "^2.18.2",
+    "use-media": "^1.4.0",
     "use-state-if-mounted": "^1.0.4"
   },
   "devDependencies": {
