--- a/website/ClientApp/package.json
+++ b/website/ClientApp/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^32.0.0",
     "@ckeditor/ckeditor5-react": "^4.0.0",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.4.1",
     "@mui/styled-engine-sc": "^5.4.1",
     "axios": "^0.25.0",
     "bootstrap": "^4.1.3",
@@ -16,8 +19,9 @@
     "oidc-client": "^1.9.0",
     "prettier": "^2.5.1",
     "quill-image-uploader": "^1.2.2",
+    "react": "^17.0.0",
     "react-carousel-minimal": "^1.4.1",
-    "react-dom": "^16.14.0",
+    "react-dom": "^17.0.0",
     "react-draft-wysiwyg": "^1.14.7",
     "react-gallery-carousel": "^0.2.9",
     "react-icons": "^4.3.1",
