--- a/website/ClientApp/package.json
+++ b/website/ClientApp/package.json
@@ -34,6 +34,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "^3.4.1",
     "react-slick": "^0.28.1",
+    "react-spinners": "^0.13.8",
     "reactstrap": "^8.4.1",
     "rimraf": "^2.6.2",
     "slate": "^0.72.8",
